# ChangeLog for net-libs/gnutls
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.100 2006/09/10 17:18:49 the_paya Exp $

  10 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  gnutls-1.2.11.ebuild:
  Add ~x86-fbsd keyword.

  03 Aug 2006; Daniel Black <dragonheart@gentoo.org> gnutls-1.4.1.ebuild:
  removed --without-included-libtasn1 as oddly enough it uses the included
  libtasn1. Thanks to Peter Hyman for picking up the missing dependency

*gnutls-1.4.1 (01 Aug 2006)
*gnutls-1.2.11 (01 Aug 2006)

  01 Aug 2006; Daniel Black <dragonheart@gentoo.org>
  +files/gnutls-1.2.10-as-needed.patch, +files/gnutls-1.4.1-as-needed.patch,
  gnutls-1.2.10-r1.ebuild, +gnutls-1.2.11.ebuild, +gnutls-1.4.1.ebuild:
  fix for selftest with LDFLAGS="-Wl,--as-needed" as per bug #142353 thanks to
  Brant Gurganus. Version bump to 1.4.1 as well

  15 Jul 2006; Marcelo Goes <vanquirius@gentoo.org> -gnutls-1.2.3.ebuild,
  -gnutls-1.2.4.ebuild, -gnutls-1.2.9.ebuild, -gnutls-1.2.9-r1.ebuild:
  Remove ebuilds earlier than 1.2.10 for security cleanup bug 140530, reported
  by Jakub Moc <jakub at gentoo dot org>.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> gnutls-1.2.10.ebuild:
  Marked stable on mips.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-gnutls-1.2.3,
  files/digest-gnutls-1.2.4, files/digest-gnutls-1.2.9,
  files/digest-gnutls-1.2.9-r1, Manifest:
  Fixing SHA256 digest, pass four

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> gnutls-1.2.10.ebuild,
  gnutls-1.2.10-r1.ebuild:
  Run elibtoolize and add ~x86-fbsd keyword.

  10 Mar 2006; Marcelo Goes <vanquirius@gentoo.org> gnutls-1.2.3.ebuild,
  gnutls-1.2.4.ebuild:
  Use --library=foo instead of --soname foo as a revdep-rebuild argument given
  by einfo. This is for bug 125506, reported by Carsten Lohrke <carlo at
  gentoo dot org>.

  12 Feb 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnutls-1.2.10.ebuild: