@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gnutls-1.2.10-as-needed.patch 1418 RMD160 0c2b7c1984c886e44956d5b31672ae10ad23421b SHA1 6920685847e67cfb0e6859ecc12876effe4960ea SHA256 a573a7cc02c67b86bef3ada98d62a9b4e3d21767e31844c5dd837fc2c67fca3c
 MD5 aeb37fd93438092e982743c59ca5feea files/gnutls-1.2.10-as-needed.patch 1418
 RMD160 0c2b7c1984c886e44956d5b31672ae10ad23421b files/gnutls-1.2.10-as-needed.patch 1418
@@ -9,6 +12,7 @@ SHA256 978f7f3e23b4f1e1fb53a49407e9adfa7b9c4d30e363631ae43731da9918c153 files/gn
 DIST gnutls-1.2.10.tar.bz2 2737849 RMD160 33b0d4e5955b06611141ac2d1e8889b42675cc98 SHA1 18140bebae006e019deb77962836bcd775256aab SHA256 1b16eecc4a8bf2f4941eb7a2ebf0632f908b9c2733457e0076b13a79798dce23
 DIST gnutls-1.2.11.tar.bz2 2756620 RMD160 07b3f4b9fb875c55e981f95aa4edb6c639176331 SHA1 4d5167091c72f994ed97e1406ae886f3c2757d49 SHA256 400c118150b31f475a5d562d60ab6912ed7a52b12ef31b2ad9b30a6960ea446d
 DIST gnutls-1.4.1.tar.bz2 4046780 RMD160 1bb959a118ce8d776693f602034342c31a8737aa SHA1 25d183fef21abbcaab0afe6b5809893aa70b577d SHA256 834e0009a6bfc67c427ba652ae2139f6cce50b4a1ac38214de6249611de73def
+DIST gnutls-1.4.4.tar.bz2 4048916 RMD160 a31dfe33934ddf2500ae0e6c67aa265cd5b9ede4 SHA1 8f6ee112c8d93dd726e8e3d0e3fbf234f085a2cd SHA256 dfcdcd622b80b00d28ee40881ee56fec771213110b7fc07048bce07df7cec035
 EBUILD gnutls-1.2.10-r1.ebuild 1674 RMD160 3188d68a61d8a8f84ed282026a767172b65d1a48 SHA1 d29f4409459a7225cba3c033945cb30579d89d4b SHA256 13f81ece77dc2a3e6968f0b3775ce9a090f05d1971900fbe6338840a76a3e8b2
 MD5 f3482f1e82f666a1c3365664b4d99337 gnutls-1.2.10-r1.ebuild 1674
 RMD160 3188d68a61d8a8f84ed282026a767172b65d1a48 gnutls-1.2.10-r1.ebuild 1674
@@ -25,10 +29,14 @@ EBUILD gnutls-1.4.1.ebuild 1468 RMD160 47af0e82fa9b128d6255f80043c95e6ce3c58474 
 MD5 e1bd943b030b2733afdb1de20a8213e7 gnutls-1.4.1.ebuild 1468
 RMD160 47af0e82fa9b128d6255f80043c95e6ce3c58474 gnutls-1.4.1.ebuild 1468
 SHA256 89b0c973352da16292da172d31f5347ed3dcde7de2746859d6680b92a5d89e7e gnutls-1.4.1.ebuild 1468
-MISC ChangeLog 15117 RMD160 65f492bc4aeaca72a05072da57ed88fc596d4253 SHA1 0085df5f1b3d43498d677db62afb2f988bac594c SHA256 b2c5d555232548749177588d09ad9e2d9f419e2c9bc500d3c370cb3daf4615eb
-MD5 a166c07ac9858bbedd9c3a62ec3f5541 ChangeLog 15117
-RMD160 65f492bc4aeaca72a05072da57ed88fc596d4253 ChangeLog 15117
-SHA256 b2c5d555232548749177588d09ad9e2d9f419e2c9bc500d3c370cb3daf4615eb ChangeLog 15117
+EBUILD gnutls-1.4.4.ebuild 1419 RMD160 908fc6519256ff8c062d1c07cc0043ce11111e6b SHA1 8c309b0ab3e04d51c023fbdc9ded90482b194ca3 SHA256 415b58c1a82da2443cff657819faaa807dddd24e7cb7ba9d98bc8a838e189b1c
+MD5 473f49c4ba4a3c126c21a4fb5c4542b3 gnutls-1.4.4.ebuild 1419
+RMD160 908fc6519256ff8c062d1c07cc0043ce11111e6b gnutls-1.4.4.ebuild 1419
+SHA256 415b58c1a82da2443cff657819faaa807dddd24e7cb7ba9d98bc8a838e189b1c gnutls-1.4.4.ebuild 1419
+MISC ChangeLog 15265 RMD160 df07ad9399f64eba32f316b7763e4d0778d5fd4a SHA1 d83420cf66ffc9552a5cfd8733e8b04235797ee1 SHA256 5c9ad91a32827c8811396ccad2a9ce5e3c428b75ff3fcc387a34afdaef7005ac
+MD5 506a2fdc5e9d8ab5f811d94676be0490 ChangeLog 15265
+RMD160 df07ad9399f64eba32f316b7763e4d0778d5fd4a ChangeLog 15265
+SHA256 5c9ad91a32827c8811396ccad2a9ce5e3c428b75ff3fcc387a34afdaef7005ac ChangeLog 15265
 MISC metadata.xml 276 RMD160 99eb13264f3656e33d5cbc95ed9319ba50a1e58c SHA1 1f70a3ead5de1eb0d62a59c084b3a06147256e2f SHA256 abd952a77edadf769a821e7210a01f38850cada9a7677a1561f6aa0ce954f480
 MD5 918a1b851dd53568897b4fc7c503912e metadata.xml 276
 RMD160 99eb13264f3656e33d5cbc95ed9319ba50a1e58c metadata.xml 276
@@ -45,3 +53,13 @@ SHA256 8d3459d1267af0e4b428e0cc7754900fd0683d7ffc1343efbc734299f88b26ca files/di
 MD5 dc7a3d08731b4d700adadcb93d1a3e4b files/digest-gnutls-1.4.1 244
 RMD160 44feeb4561921ea716793d0cf06ef98dc3fb3eac files/digest-gnutls-1.4.1 244
 SHA256 9b90f6154d6e62a7ca293a0952da6a9981722382f5f90b8af55fa46db7846dc0 files/digest-gnutls-1.4.1 244
+MD5 be730be5feb0bac389fb036a33c1c42b files/digest-gnutls-1.4.4 244
+RMD160 3ac7f1b8772d3ed3329629f22c09773ecded01b1 files/digest-gnutls-1.4.4 244
+SHA256 314e2cbd832d1f021e946afb2adbbf21fdd1946d5724eb8a623934aa0c8cd999 files/digest-gnutls-1.4.4 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
+
+iD8DBQFFC1epmdTrptrqvGERAgiuAKCcAjAIQw2KRWQzp5CGYhxB9zxBbACfaVZw
+jOonLGtfb8PF+gduWx556is=
+=UJoH
+-----END PGP SIGNATURE-----
