@@ -1,0 +1,3 @@
+MD5 de5e060eeb2da36654e9e8af6b8b012a gnutls-1.4.4.tar.bz2 4048916
+RMD160 a31dfe33934ddf2500ae0e6c67aa265cd5b9ede4 gnutls-1.4.4.tar.bz2 4048916
+SHA256 dfcdcd622b80b00d28ee40881ee56fec771213110b7fc07048bce07df7cec035 gnutls-1.4.4.tar.bz2 4048916
