@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.100 2006/09/10 17:18:49 the_paya Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.101 2006/09/16 01:41:19 dragonheart Exp $
+
+*gnutls-1.4.4 (16 Sep 2006)
+
+  16 Sep 2006; Daniel Black <dragonheart@gentoo.org> +gnutls-1.4.4.ebuild:
+  version bump for security bug #147682
 
   10 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
   gnutls-1.2.11.ebuild:
